# Inditex-Recommender-Hackaton

./: .gitignore  README.md  TO_DOS.md  config.py  fetch_user_data.py  git_commands.md  main.py  process_traintest.py  pyproject.toml  simpler_test.py  task1_q3.py
notebooks/: 00_load_and_inspect.ipynb  01_task1.ipynb  03_task3_cleaning.ipynb  03a_task3_prepare_users.ipynb  03b_task3_prepare_products.ipynb  03c_task3_prepare_train-test.ipynb  04_cosine_similarities.ipynb  99_check_submission3.ipynb
notebooks/Exploratory_tasks1-2/: 02_task2.ipynb  03d_task3_train_model.ipynb  04_cosine_similarities.ipynb
notebooks/Kaggle_Ranker_Model/: hack-inditex-task3-data.ipynb  hack-inditex-task3-trainranker.ipynb
predictions/: example_predictions_1.json  predictions_1.json  predictions_1_57of100.json  predictions_3.json
src/: utils.py
src/data/: api_calls.py  loaders.py  session_metrics.py
src/models/: prepare_data.py
tests/: function_tests.py
