[project]
name = "hackathon-inditex-data-recommender"
version = "0.1.0"
description = "Nuwe Inditex Hackaton Solution - Ezequiel M Rivero"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
